# strusPrototypeModuleV1

./: .gitignore  BUGS  CMakeLists.txt  CONTRIBUTING  INSTALL.FreeBSD  README.md
cmake/: dist.cmake
include/strus/private/: bitOperations.hpp  errorUtils.hpp  internationalization.hpp  utils.hpp
src/: CMakeLists.txt
src/testmodule/: CMakeLists.txt  formulaInterpreter.cpp  formulaInterpreter.hpp  internationalization.cpp  modtest.cpp  operatortest.cpp  operatortest.hpp  positionWindow.cpp  positionWindow.hpp  postingIteratorHelpers.cpp  postingIteratorHelpers.hpp  summarizertest.cpp  summarizertest.hpp  summarizertest2.cpp  summarizertest2.hpp  utils.cpp  weightingFormula.cpp  weightingFormula.hpp  weightingMetadata2.cpp  weightingMetadata2.hpp  weightingtest.cpp  weightingtest.hpp  window_joinop.cpp  window_joinop.hpp
